fix:overflow issue

--- a/app/globals.css
+++ b/app/globals.css
@@ -31,7 +31,7 @@
   --color-gray: #fffaf3;
   --color-light-black: #403f3e;
   --color-bg-color: #f9f2e9;
-  --color-card: #FBF8F3;
+  --color-card: #fbf8f3;
   --color-text: #1c1c1c;
   --font-tay-bea: "Tay Bea";
   --font-raleway: "Raleway";
@@ -50,7 +50,6 @@
 body {
   background: #f9f2e9;
   color: var(--foreground);
- overflow-y: hidden;
 }
 
 .loader {
